--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,9 +1,4 @@
-"AJP":
-  url: https://aapt.scitation.org/journal/ajp
-  color: "#00369f"
 
-"PhysRev":
-  url: https://journals.aps.org/
-
-"Vision":
-  color: "#009f36"
+"IEEE TSG":
+  color: "#00629B"
+  url: https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5165411
