--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,189 +1,132 @@
 cv:
-  name: Albert Einstein
-  label: Scientist
-  email: einstein@example.com
-  location: Princeton, NJ
+  name: Jaehwan Lee
+  label: Ph.D. Student
+  email: jh.lee@kaist.ac.kr
+  location: Daejeon, Korea
   image: ""
-  summary: A German-born theoretical physicist, widely ranked among the greatest and most influential scientists of all time
+  summary: Ph.D. student in Data Science at KAIST, focusing on the integration of quantum computing and operations research.
 
   social_networks:
-    - network: X
-      username: AlbertEinstein
     - network: GitHub
-      username: example
+      username: jaehwan-2ee
     - network: LinkedIn
-      username: example
-
-  address:
-    street: 2712 Broadway St
-    city: San Francisco
-    region: California
-    postalCode: CA 94115
-    countryCode: US
+      username: jaehwanlee-878400314
+    - network: orcid
+      username: 0009-0003-9985-7118
 
   sections:
     Education:
-      - institution: University of Zurich
-        location: Zurich, Switzerland
-        url: https://www.uzh.ch/
-        area: Physics
-        studyType: PhD
-        start_date: 1900
-        end_date: 1905
-        score: ""
-        courses: "Theory of Relativity"
-        highlights:
-          - Description 1.
-          - Description 2.
+      - institution: KAIST
+        location: Daejeon, Korea
+        url: https://www.kaist.ac.kr/
+        area: Data Science
+        studyType: Ph.D.
+        start_date: 2025-02
+        end_date: present
 
-      - institution: Eidgenössische Technische Hochschule
-        location: Zurich, Switzerland
-        area: Physics
-        studyType: Federal teaching diploma
-        start_date: 1896
-        end_date: 1900
-        highlights:
-          - Description 1.
-          - Description 2.
+      - institution: Yonsei University
+        location: Seoul, Korea
+        url: https://www.yonsei.ac.kr/
+        area: Applied Statistics
+        studyType: B.A.
+        start_date: 2020-03
+        end_date: 2025-02
+        score: "GPA: 4.16/4.3"
 
     Experience:
-      - company: Institute for Advanced Study, Princeton University
-        position: Professor of Theoretical Physics
-        location: Princeton University, NJ
-        start_date: 1933
-        end_date: 1955
-        summary: Teaching at Palmer Physical Laboratory (now 302 Frist Campus Center). While not a professor at Princeton, I associated with the physics professors and continued to give lectures on campus.
-        highlights:
-          - Relativity
-          - Description 2.
+      - company: Computational Optimization Methods (COMET) Lab
+        position: Graduate Research Assistant
+        location: Daejeon, Korea
+        url: http://comet.kaist.ac.kr/
+        start_date: 2025-02
+        end_date: present
+        summary: Supervised by Prof. Changhyun Kwon
 
-      - company: California Institute of Technology
-        position: Visiting Professor
-        location: Pasadena, California, US
-        start_date: 1933
-        end_date: 1933
-        highlights:
-          - Description 1.
-          - Description 2.
+      - company: Computational Optimization Methods (COMET) Lab
+        position: Undergraduate Research Assistant
+        location: Daejeon, Korea
+        url: http://comet.kaist.ac.kr/
+        start_date: 2024-06
+        end_date: 2024-08
+        summary: Supervised by Prof. Changhyun Kwon
 
-      - company: Kaiser Wilhelm Institute for Physics
-        position: Director
-        location: Berlin, Germany
-        start_date: 1917
-        end_date: 1933
-
-      - company: Karl-Ferdinand University
-        position: Professor of Theoretical Physics
-        location: Prague, Czechoslovakia
-        start_date: 1911
-        end_date: 1917
-
-      - company: University of Zurich
-        position: Associate Professor of Theoretical Physics
-        location: Zurich, Switzerland
-        start_date: 1909
-        end_date: 1911
-
-    Volunteer:
-      - company: People's Climate March
-        position: Lead Organizer
-        location: Zurich, Switzerland
-        start_date: 2014-04-01
-        end_date: 2015-07-01
-        summary: Lead organizer for the New York City branch of the People's Climate March, the largest climate march in history.
-        highlights:
-          - "Awarded 'Climate Hero' award by Greenpeace for my efforts organizing the march."
-          - "Men of the year 2014 by Time magazine"
-
-    Awards:
-      - title: Nobel Prize in Physics
-        authors:
-          - "Royal Swedish Academy of Sciences"
-        date: 1921-11-01
-        awarder: Royal Swedish Academy of Sciences
-        url: https://www.nobelprize.org/prizes/physics/1921/einstein/biographical/
-        summary: The Nobel Prizes are five separate prizes that, according to Alfred Nobel's will of 1895, are awarded to 'those who, during the preceding year, have conferred the greatest benefit to humankind.'
-
-      - title: Max Planck Medal
-        authors:
-          - "German Physical Society"
-        date: 2029
-        awarder: German Physical Society
-        summary: Awarded for outstanding scientific achievement
+      - company: Systems Modeling And Programming Lab @ Yonsei (SYMPLY)
+        position: Undergraduate Research Assistant
+        location: Seoul, Korea
+        url: https://symply.yonsei.ac.kr/
+        start_date: 2022-08
+        end_date: 2024-06
+        summary: Supervised by Prof. Soongeol Kwon
 
     Publications:
-      - title: Zur Elektrodynamik bewegter Körper
+      - title: "Supervised Optimization Framework for Charging and Discharging Controls of Battery Energy Storage"
         authors:
-          - Albert Einstein
-        publisher: Annalen der Physik
-        releaseDate: 1905-06-30
-        url: https://en.wikisource.org/wiki/Translation:On_the_Electrodynamics_of_Moving_Bodies
-        summary: It concerned an interpretation of the Michelson–Morley experiment and the properties of light and time. Special relativity incorporates the principle that the speed of light is the same for all inertial observers regardless of the state of motion of the source.
+          - Jaehwan Lee
+          - Soongeol Kwon
+        publisher: IEEE Transactions on Smart Grid
+        releaseDate: 2024
+        url: https://doi.org/10.1109/TSG.2024.3416369
+        summary: "IEEE Transactions on Smart Grid, 2024, 15.6: 5610-5621."
 
-      - title: Über einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt
-        authors:
-          - Albert Einstein
-        publisher: Annalen der Physik
-        releaseDate: 1905-03-18
-        url: https://de.wikisource.org/wiki/Über_einen_die_Erzeugung_und_Verwandlung_des_Lichtes_betreffenden_heuristischen_Gesichtspunkt
-        summary: In the second paper, he applied the quantum theory to light to explain the photoelectric effect. In particular, he used the idea of light quanta (photons) to explain experimental results, but stressed the importance of the experimental results. The importance of his work on the photoelectric effect earned him the Nobel Prize in Physics in 1921.
+    Projects:
+      - name: Quantum Decision-Focused Learning
+        summary: Studying and developing quantum decision-focused learning framework with GS CAUS
+        start_date: 2025-09
+        end_date: present
+        highlights:
+          - "Tools & technologies: Python, Qiskit, Gurobi"
 
-      - title: Die Grundlage der allgemeinen Relativitätstheorie
-        authors:
-          - Albert Einstein
-        publisher: Annalen der Physik
-        releaseDate: 1916-03-20
-        url: https://de.wikisource.org/wiki/Die_Grundlage_der_allgemeinen_Relativitätstheorie
-        summary: The publication of the theory of general relativity made him internationally famous. He was professor of physics at the universities of Zurich (1909–1911) and Prague (1911–1912), before he returned to ETH Zurich (1912–1914).
+      - name: Neural Combinatorial Optimization with Decision Transformer Framework
+        summary: Reinforcement Learning Team Project
+        start_date: 2024-05
+        end_date: 2024-05
+        highlights:
+          - "Tools & technologies: Python, PyTorch, OR-Tools"
+          - Studied decision transformer framework and traveling salesman problem
+
+      - name: Optimizing Energy Consumption by Integrating Machine Learning and Mathematical Optimization
+        summary: Final Project in ESC 29th
+        start_date: 2023-05
+        end_date: 2023-05
+        highlights:
+          - "Tools & technologies: Python, Scikit-learn, Gurobi"
+          - Studied machine learning techniques and MILP
 
     Skills:
-      - name: Physics
-        level: Master
-        icon: fa-solid fa-hashtag
-        keywords: "Quantum Mechanics, Quantum Computing, Quantum Information, Quantum Cryptography, Quantum Communication, Quantum Teleportation"
+      - name: Programming Languages
+        level: ""
+        icon: fa-solid fa-code
+        keywords: "C++, Python, Julia"
+
+      - name: Research Interests
+        level: ""
+        icon: fa-solid fa-flask
+        keywords: "OR-based Quantum Computing Enhancement, Quantum Computing-based Optimization Acceleration"
+
+    Awards:
+      - title: 2nd Prize, 11th BIG CONTEST 2023
+        date: 2023-12
+        awarder: ""
+
+      - title: 4th Prize, 10th BIG CONTEST 2022
+        date: 2022-12
+        awarder: ""
+
+      - title: 4th Prize, Traditional Culture Youth Entrepreneurship Idea Contest 2022
+        date: 2021-08
+        awarder: ""
+
+      - title: Academic Honors Award, Semester 2022-1
+        date: 2022-08
+        awarder: Yonsei University
+
+      - title: Academic Excellence Award, Semester 2021-2
+        date: 2022-02
+        awarder: Yonsei University
 
     Languages:
-      - name: German
+      - name: Korean
         summary: "Native speaker"
 
       - name: English
         summary: "Fluent"
-
-    Interests:
-      - name: Physics
-        icon: fa-solid fa-tag
-        keywords: "Quantum Mechanics, Quantum Computing, Quantum Information, Quantum Cryptography, Quantum Communication, Quantum Teleportation"
-
-    Certificates:
-      - name: Machine Learning
-        date: 2018-01-01
-        issuer: Stanford University
-        icon: fa-solid fa-location-dot
-
-      - name: Quantum Computing
-        date: 2018-01-01
-        issuer: Stanford University
-        icon: fa-solid fa-tag
-
-      - name: Quantum Information
-        date: 2018-01-01
-        issuer: Stanford University
-        icon: fa-solid fa-envelope
-
-    Projects:
-      - name: Quantum Computing
-        summary: Quantum computing is the use of quantum-mechanical phenomena such as superposition and entanglement to perform computation. Computers that perform quantum computations are known as quantum computers.
-        highlights:
-          - Quantum Teleportation
-          - Quantum Cryptography
-        start_date: 2018-01-01
-        end_date: 2018-01-01
-
-    References:
-      - name: Professor John Doe
-        icon: fa-solid fa-laptop
-        reference: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam condimentum, diam quis convallis euismod, arcu mi ullamcorper lorem, a vestibulum nunc magna at sem. Sed in risus ac felis varius blandit.
-
-      - name: Professor Jane Smith
-        icon: fa-solid fa-thumbtack
-        reference: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam condimentum, diam quis convallis euismod, arcu mi ullamcorper lorem, a vestibulum nunc magna at sem. Sed in risus ac felis varius blandit.
