--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -4,7 +4,7 @@ cv:
   email: jh.lee@kaist.ac.kr
   location: Daejeon, Korea
   image: ""
-  summary: Ph.D. student in Data Science at KAIST, focusing on the integration of quantum computing and operations research.
+  summary: Ph.D. student in Data Science at KAIST, focusing on the integration of quantum computing and operations research for sustainability.
 
   social_networks:
     - network: GitHub
