--- a/_config.yml
+++ b/_config.yml
@@ -11,16 +11,14 @@ contact_note: >
   jaehwan.lee@comet.kaist.ac.kr
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Ph.D. Student @ KAIST GSDS | Graduate Researcher @ COMET LAB | Interested in Quantum Computing & Contextual Optimization
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+footer_text: # leave empty to hide footer text
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 💙 # the emoji used as the favicon
 
 url: https://jaehwan-2ee.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
-last_updated: true # set to true if you want to display last updated in the footer
+last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 back_to_top: true # set to false to disable the back to top button
 
@@ -48,6 +46,7 @@ repo_trophies:
 
 navbar_fixed: true
 footer_fixed: true
+show_footer: false # set to true to display footer
 search_enabled: false
 socials_in_search: true
 posts_in_search: true
