--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ contact_note: >
   jh.lee@kaist.ac.kr,
   jaehwan.lee@comet.kaist.ac.kr
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Ph.D. Student @ KAIST GSDS | Graduate Researcher @ COMET LAB | Interested in Quantum Computing & Contextual Optimization
+  Ph.D. Student @ KAIST GSDS | Graduate Researcher @ COMET LAB | Interested in Quantum Computing + Operations Research
 footer_text: # leave empty to hide footer text
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
